--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "colors": "^1.4.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "groq-sdk": "^0.37.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.555.0",
     "next": "^16.0.5",
